<resources>
    <string name="app_name">知位移</string>
    <string name="user_name">用户名：</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="password">密码：</string>
    <string name="password_hint">请输入密码</string>
    <string name="title1">首 页</string>
    <string name="query_user_login">用户登陆查询</string>
    <string name="query_devcie">已有设备信息</string>
    <string name="new_device">新建设备信息</string>
    <string name="admin">管理员信息</string>
    <string name="query_user">已有用户信息</string>
    <string name="new_user">新建用户信息</string>
    <string name="accompany">公司管理</string>
    <string name="splash_title1">旋转设备转轴位移</string>
    <string name="splash_title2">监测系统</string>
    <string name="splash_title3">1.0版</string>
    <string name="splash_title4">宝武智能装备科技有限公司</string>
    <string name="splash_title5">检修事业部</string>
    <string name="new_company">新建公司</string>
    <string name="new_sub_branch">新建分厂</string>
    <string name="query_company">已接入公司</string>
    <string name="new_site">新建站点</string>
    <string name="user_register_title">新建用户信息</string>
    <string name="user_name1">用户名</string>
    <string name="duty">职务</string>
    <string name="duty_hint">请输入职务</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_hint">请输入手机号</string>
    <string name="password1">密码</string>
    <string name="next_page">下一页</string>
    <string name="query_login">用户登录查询</string>
    <string name="company">公司</string>
    <string name="query">查询</string>
    <string name="logout">退出登录</string>
    <string name="sub_branch">分厂</string>
    <string name="query_admin">查看管理员</string>
    <string name="add">添加管理员</string>
    <string name="site">站点</string>
    <string name="company_hint">请输入公司</string>
    <string name="create">创 建</string>
    <string name="site_hint">请输入站点</string>
    <string name="sub_branch_hint">请输入分厂</string>
    <string name="new_machine">新建设备信息</string>
    <string name="machine_number">设备编号</string>
    <string name="machine_hint">请输入设备编号</string>
    <string name="type">设备类型</string>
    <string name="next_step">下一步</string>
    <string name="sensor_configure">传感器设置</string>
    <string name="sensor_x1">电机轴轴向X1量程(毫米)</string>
    <string name="sensor_x2">机械轴轴向X2量程(毫米)</string>
    <string name="sensor_x3">负荷侧径向X3量程(毫米)</string>
    <string name="sensor_x4">非负荷侧径向X4量程(毫米)</string>
    <string name="frequency">扫描频率(秒)</string>
    <string name="bearing_bush_arg1">监控轴瓦轴向总间隙(毫米)</string>
    <string name="bearing_bush_arg2">负荷侧间隙A(毫米)</string>
    <string name="bearing_bush_arg3">非负荷侧间隙B(毫米)</string>
    <string name="bearing_bush_arg4">负荷侧间隙报警值(毫米)</string>
    <string name="bearing_bush_arg5">非负荷侧间隙报警值(毫米)</string>
    <string name="bearing_bush_arg6">负荷侧间隙预警值(毫米)</string>
    <string name="bearing_bush_arg7">非负荷侧间隙预警值(毫米)</string>
    <string name="bearing_bush_arg8">负荷轴顶升报警值(毫米)</string>
    <string name="bearing_bush_arg9">非负荷轴顶升报警值(毫米)</string>
    <string name="bearing_arg1">电机轴轴向负荷侧位移量A(毫米)</string>
    <string name="bearing_bush">电机轴轴向非负荷侧位移量B(毫米)</string>
    <string name="bearing_arg3">电机轴轴向位移量报警值(毫米)</string>
    <string name="bearing_arg4">机械轴轴向负荷侧位移量C(毫米)</string>
    <string name="bearing_arg5">机械轴轴向非负荷侧位移量D(毫米)</string>
    <string name="bearing_arg6">机械转轴向位移量报警值(毫米)</string>
    <string name="display_configuration">参数总览</string>
    <string name="finish">完成</string>
    <string name="query_device">查询已有设备</string>
    <string name="choose_device">选择设备</string>
    <string name="add1">确认添加</string>
    <string name="modify_info">修改信息</string>
    <string name="user_info">用户信息</string>
    <string name="choose_site">选择站点</string>
    <string name="query_device1">查询设备</string>
    <string name="monitor">进入监控</string>
    <string name="device">设备</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_monitor">设备监控</string>
    <string name="position">位置</string>
    <string name="real_time_interval">实时间隙</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="real_time_displacement">实时位移</string>
    <string name="C">C向</string>
    <string name="D">D向</string>
    <string name="modify_arg">参数修改</string>
    <string name="query_warning">报警查询</string>
    <string name="real_time_data">实时顶升量</string>
    <string name="load_side">负荷侧</string>
    <string name="non_load_side">非负荷侧</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="check_arg">参数查看</string>
    <string name="query_alarm">报警查询</string>
    <string name="download">下载</string>
    <string name="alarm_list">报警列表</string>
    <string name="bearing_chart_description1">电机转轴监测</string>
    <string name="bearing_chart_description2">机械转轴监测</string>
    <string name="c_side">C(负荷侧)</string>
    <string name="d_side">D(非负荷侧)</string>
</resources>