<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical|right"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/user_name"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/user_name_hint"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_below="@id/ll1"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical|right"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/password"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp" />

            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/password_hint"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:layout_below="@id/ll2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="登  陆"
            android:textSize="20sp" />
    </RelativeLayout>
</layout>