<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/toolbar"
            android:background="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_arrow_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/toolbar_text"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/alarm_list"
                android:textSize="28sp"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_type"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/ll_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="@dimen/textSize1"
                android:padding="5dp"
                android:layout_marginLeft="30dp"
                android:textColor="#000000"
                android:layout_marginStart="30dp" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_device"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device"
                android:textSize="@dimen/textSize1"
                android:padding="5dp"
                android:layout_marginLeft="30dp"
                android:textColor="#000000"
                android:layout_marginStart="30dp" />

            <Spinner
                android:id="@+id/spinner_device"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_alarm"
                android:textSize="@dimen/textSize1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp" />
        </RelativeLayout>



    </LinearLayout>
</layout>